data/derived/sp14/progs/unify/prog1966.ml.out
Characters 57-70:
  let rec digitsOfInt n = if n <= 0 then [] else n mod 10::digitsOfInt n/10;;
                                                           ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
